Correct comments of Etienne
Signed-off-by: Thang PHAM <phamthang37@gmail.com>